[gd_scene load_steps=9 format=3 uid="uid://rsc2mv6prbyg"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_pq24k"]
[ext_resource type="Texture2D" uid="uid://yae6jk0p5dpi" path="res://assets/Startmenü/Galaxy hintergrund godot 2.png" id="3_a3iva"]
[ext_resource type="Texture2D" uid="uid://2kyo0728e4i8" path="res://assets/Startmenü/button_play(2).png" id="4_qyh8h"]
[ext_resource type="Texture2D" uid="uid://by7xsdvp6astl" path="res://assets/Startmenü/button_exit.png" id="5_texkl"]
[ext_resource type="Texture2D" uid="uid://boivvoemfni4d" path="res://assets/Startmenü/button_setting.png" id="6_4ltqo"]
[ext_resource type="Texture2D" uid="uid://v3c5q57rh34b" path="res://assets/Startmenü/button(2) (1).png" id="7_1ufc5"]
[ext_resource type="Texture2D" uid="uid://dp02d53y5e173" path="res://assets/Startmenü/button_host-lobby.png" id="8_t6if8"]
[ext_resource type="Texture2D" uid="uid://do46q0mv4uhl2" path="res://assets/Startmenü/button_join-lobby(1).png" id="9_risg6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pq24k")

[node name="before_game_screen" type="Node2D" parent="."]
position = Vector2(397, 182)

[node name="background" type="Sprite2D" parent="before_game_screen"]
position = Vector2(179.05, 141.986)
scale = Vector2(0.581767, 0.327287)
texture = ExtResource("3_a3iva")

[node name="playButton" type="Button" parent="before_game_screen"]
offset_left = 52.0
offset_top = -155.0
offset_right = 365.0
offset_bottom = -84.0
scale = Vector2(0.74628, 0.863426)

[node name="Sprite2D" type="Sprite2D" parent="before_game_screen/playButton"]
position = Vector2(156, 35)
scale = Vector2(1.56004, 1.41323)
texture = ExtResource("4_qyh8h")

[node name="quitButton" type="Button" parent="before_game_screen"]
offset_left = 612.42
offset_top = 417.912
offset_right = 731.42
offset_bottom = 449.912

[node name="Sprite2D" type="Sprite2D" parent="before_game_screen/quitButton"]
position = Vector2(60, 16)
scale = Vector2(0.788537, 0.583152)
texture = ExtResource("5_texkl")

[node name="settingsButton" type="Button" parent="before_game_screen"]
offset_left = -369.0
offset_top = -166.0
offset_right = -213.0
offset_bottom = -105.0
scale = Vector2(0.957773, 0.599668)

[node name="Sprite2D" type="Sprite2D" parent="before_game_screen/settingsButton"]
position = Vector2(78, 30)
scale = Vector2(1.04063, 1.16203)
texture = ExtResource("6_4ltqo")

[node name="Setting_screen" type="Node2D" parent="."]
visible = false
position = Vector2(2, 121)

[node name="background" type="Sprite2D" parent="Setting_screen"]
position = Vector2(574.1, 203)
scale = Vector2(0.581685, 0.326869)
texture = ExtResource("3_a3iva")

[node name="exit_settings" type="Button" parent="Setting_screen"]
offset_left = 455.0
offset_top = -41.0
offset_right = 585.0
offset_bottom = 6.0

[node name="Sprite2D" type="Sprite2D" parent="Setting_screen/exit_settings"]
position = Vector2(67, 23)
scale = Vector2(0.946, 1)
texture = ExtResource("7_1ufc5")

[node name="starting_game_screen" type="Node2D" parent="."]
visible = false
position = Vector2(253, 88)

[node name="background" type="Sprite2D" parent="starting_game_screen"]
position = Vector2(323, 235.8)
scale = Vector2(0.581748, 0.327057)
texture = ExtResource("3_a3iva")

[node name="createlobbyButton" type="Button" parent="starting_game_screen"]
offset_left = 69.0
offset_top = 178.0
offset_right = 222.0
offset_bottom = 216.0

[node name="Sprite2D" type="Sprite2D" parent="starting_game_screen/createlobbyButton"]
position = Vector2(75, 19)
texture = ExtResource("8_t6if8")

[node name="joinlobbyButton" type="Button" parent="starting_game_screen"]
offset_left = 392.0
offset_top = 176.0
offset_right = 543.0
offset_bottom = 210.0

[node name="Sprite2D" type="Sprite2D" parent="starting_game_screen/joinlobbyButton"]
position = Vector2(75, 17)
texture = ExtResource("9_risg6")

[node name="exit_starting" type="Button" parent="starting_game_screen"]
offset_left = 224.0
offset_top = 394.0
offset_right = 365.0
offset_bottom = 432.0

[node name="Sprite2D" type="Sprite2D" parent="starting_game_screen/exit_starting"]
position = Vector2(71, 18)
scale = Vector2(1.01471, 0.808511)
texture = ExtResource("7_1ufc5")

[node name="join_lobby_screen" type="Node2D" parent="."]
visible = false
position = Vector2(1, 2)

[node name="Sprite2D" type="Sprite2D" parent="join_lobby_screen"]
position = Vector2(575, 322)
scale = Vector2(0.581658, 0.327323)
texture = ExtResource("3_a3iva")

[node name="CenterContainer" type="CenterContainer" parent="join_lobby_screen"]
offset_left = 362.0
offset_top = 256.0
offset_right = 752.0
offset_bottom = 400.0

[node name="LineEdit" type="LineEdit" parent="join_lobby_screen/CenterContainer"]
layout_mode = 2
placeholder_text = "IP-Adresse"
expand_to_text_length = true

[node name="exit_joinLobby" type="Button" parent="join_lobby_screen"]
offset_left = 493.0
offset_top = 383.0
offset_right = 1421.0
offset_bottom = 719.0
scale = Vector2(0.156315, 0.125009)

[node name="Sprite2D" type="Sprite2D" parent="join_lobby_screen/exit_joinLobby"]
position = Vector2(467.006, 167.988)
scale = Vector2(6.80326, 6.97822)
texture = ExtResource("7_1ufc5")

[node name="startButton" type="Button" parent="join_lobby_screen"]
offset_left = 610.0
offset_top = 317.0
offset_right = 677.0
offset_bottom = 339.0

[node name="Sprite2D" type="Sprite2D" parent="join_lobby_screen/startButton"]
position = Vector2(33.5, 11)
scale = Vector2(0.335, 0.44)
texture = ExtResource("4_qyh8h")

[connection signal="pressed" from="before_game_screen/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="before_game_screen/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="before_game_screen/settingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Setting_screen/exit_settings" to="." method="_on_exit_settings_pressed"]
[connection signal="pressed" from="starting_game_screen/createlobbyButton" to="." method="_on_createlobby_button_pressed"]
[connection signal="pressed" from="starting_game_screen/joinlobbyButton" to="." method="_on_joinlobby_button_pressed"]
[connection signal="pressed" from="starting_game_screen/exit_starting" to="." method="_on_exit_starting_pressed"]
[connection signal="pressed" from="join_lobby_screen/exit_joinLobby" to="." method="_on_exit_join_lobby_pressed"]
[connection signal="pressed" from="join_lobby_screen/startButton" to="." method="_on_start_button_pressed"]
